--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
     "outDir": "build",
-    "rootDir": "src"
+    "rootDir": "src",
+    "noImplicitUseStrict": true
   },
   "exclude": [
     "node_modules"
